hydroflow/tests/compile-fail/surface_syntax_paren_noarrow_op.stderr
error: expected `->`
 --> tests/compile-fail/surface_syntax_paren_noarrow_op.rs:5:29
  |
5 |         (source_iter(0..10) for_each(std::mem::drop));
  |                             ^^^^^^^^
